# GraphPadMPL

./: .pre-commit-config.yaml  CLAUDE.md  README.md  auto_graphpad.py  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: palettes_demo.py  styles_demo.py
src/mplplots/: __init__.py  auto_graphpad.py  palettes.py  utils.py
src/mplplots/styles/: __init__.py
tests/: __init__.py  conftest.py  test_palettes.py  test_styles.py  test_utils.py
