[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mplplots"
version = "0.1.0"
description = "Visual styling helpers for Matplotlib/Seaborn"
authors = [{ name = "Zhaoyang Li", email = "zhaoyangli@stanford.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jupyter", "matplotlib", "numpy", "pandas", "scipy", "seaborn"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-timeout",
    "pytest-xdist",
    "ruff",
]

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mplplots = ["styles/*.mplstyle"]

[tool.ruff]
target-version = "py312"
preview = true
src = ["src"]
line-length = 100
force-exclude = true
extend-exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "NPY",
    "PD",
    "PERF",
    "PLE",
    "RUF",
    "SIM",
    "TID",
    "UP",
]
extend-select = ["D", "W", "PLW"]
ignore = ["B905", "E203", "E501", "E741", "UP037"]
explicit-preview-rules = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["mplplots"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "RUF059"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
pretty = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = false
namespace_packages = false
enable_incomplete_feature = ["Unpack"]
disable_error_code = ["import-not-found", "import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*", "pandas.*", "scipy.*", "seaborn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]
env = ["TQDM_DISABLE=1"]
